check version and add cool error message

--- a/src/main/resources/com/kagilum/plugins/icescrum/Messages.properties
+++ b/src/main/resources/com/kagilum/plugins/icescrum/Messages.properties
@@ -14,3 +14,5 @@ IceScrumBuildNotifier.icescrum.build.success=Successfully sent current build sta
 IceScrumBuildNotifier.icescrum.build.error=Error, Jenkins couldn''t send current build status & link to tasks on iceScrum project (
 IceScrumBuildNotifier.icescrum.build.empty=Warning\: Jenkins didn''t find any tasks to update in iceScrum
 IceScrumBuildNotifier.icescrum.build.error.check=) you should check if continuous integration is enabled
+IceScrumSession.not.compatible.version=incompatible version of iceScrum please use at least R6\#6 Pro
+IceScrumSession.only.pro.version=Only Pro version of iceScrum can be use
