Improve check credentials - Support iceScrum 7 - Check if build enabled

--- a/src/main/resources/com/kagilum/plugins/icescrum/Messages.properties
+++ b/src/main/resources/com/kagilum/plugins/icescrum/Messages.properties
@@ -9,7 +9,7 @@ IceScrumSession.icescrum.http.error=Server error
 IceScrumSession.icescrum.http.forbidden=You haven''t access to this project...
 IceScrumSession.icescrum.http.notfound=No project or iceScrum server found...
 IceScrumSession.icescrum.http.unauthorized=Wrong login/pass...
-IceScrumSession.icescrum.http.unavailable=Web services aren''t activated on your project...
+IceScrumSession.icescrum.http.unavailable=Either Web services or Continuous integration is not activated on your iceScrum project...
 IceScrumBuildNotifier.icescrum.build.success=Successfully sent current build status & link to tasks on iceScrum project (
 IceScrumBuildNotifier.icescrum.build.error=Error, Jenkins couldn''t send current build status & link to tasks on iceScrum project (
 IceScrumBuildNotifier.icescrum.build.empty=Warning\: Jenkins didn''t find any tasks to update in iceScrum
